# kleinerbot-rs

./: .gitignore  Cargo.toml  README.md  a.out  config.yaml.example
.github/workflows/: rust.yml
src/: main.rs  messages.rs  mysql.rs  web.rs
src/utils/: config.rs
