[package]
name = "kleinerbot"
version = "0.1.0"
authors = ["deinferno <14363193+deinferno@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"

[dependencies]
tokio = "0.2.21"
anyhow = "1.0.31"
futures = "0.3.5"
serde_json = "1.0.56"
bytes = "0.5.5"
serde = "1.0.114"
actix-rt = "1.1.1"
actix-web = {version = "2.0.0", features = ["openssl"]}
mysql_async = "0.23.1"
envy = "0.4.1"
regex = "1.3.9"
openssl = "0.10.30"
twilight = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }