[package]
name = "kleinerbot"
version = "0.1.0"
authors = ["deinferno <14363193+deinferno@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
actix-rt = "1.1.1"
actix-web = {version = "2.0.0", features = ["openssl"]}
anyhow = "1.0.31"
bytes = "0.5.5"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
mysql_async = "0.23.1"
openssl = "0.10.30"
regex = "1.3.9"
serde = "1.0.114"
serde_json = "1.0.56"
serde_yaml = "0.8.13"
twilight = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
