[package]
name = "kleinerbot"
version = "0.1.0"
authors = ["deinferno <14363193+deinferno@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
actix-rt = "1.1.1"
actix-web = {version = "3.3.2", default-features = false, features = ["rustls"]}
rust-tls = { package = "rustls", version = "0.18.0" }
sqlx = { version = "0.4.1", features = [ "runtime-actix-rustls", "mysql" ] }
anyhow = "1.0.34"
bytes = "0.5.6"
env_logger = "0.8.2"
futures = "0.3.8"
log = "0.4.11"
regex = "1.4.2"
serde = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.14"
twilight = "0.2.2"
twilight-cache-inmemory = "0.2.3"
twilight-gateway = "0.2.5"
twilight-http = { version = "0.2.5", default-features = false, features = ["rustls"] }
twilight-model = "0.2.4"
twilight-embed-builder = "0.2.0"